# Converter_PGM_to_SDF

./: README.md  main.py  map.pgm  map.yaml  map_2.pgm  map_2.yaml  map_3.pgm  map_3.yaml  pgm_to_sdf.py  pyproject.toml  readme.md  room.stl  slam_world.sdf  slam_world_2.sdf  t1_model_v2.sdf
